[package]
name = "raydiance"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "raydiance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet = ["anchor-spl/devnet"]
# localnet = []


[dependencies]
anchor-lang = {version = "0.26.0", features = ['init-if-needed']}
anchor-spl = {version = "0.26.0", features = ["dex"] }
